@@ -1,27 +1,14 @@
 /*
  *  Created by Medvediev Viktor [mvproject]
- *  Copyright © 2023
- *  last modified : 09.05.23, 12:09
+ *  Copyright © 2024
+ *  last modified : 29.05.24, 11:57
  *
  */
-@Suppress("DSL_SCOPE_VIOLATION")
 plugins {
     alias(libs.plugins.android.application) apply false
     alias(libs.plugins.android.library) apply false
-    alias(libs.plugins.android.kotlin) apply false
     alias(libs.plugins.multiplatform) apply false
-    alias(libs.plugins.jvm) apply false
     alias(libs.plugins.compose.multiplatform)
-    alias(libs.plugins.sqlDelight.plugin) apply false
     alias(libs.plugins.kotlinx.serialization.plugin) apply false
-    alias(libs.plugins.libres.plugin) apply false
-}
-
-tasks.register("clean", Delete::class) {
-    delete(rootProject.buildDir)
-}
-
-tasks.withType<Test>().configureEach {
-    useJUnitPlatform()
-    jvmArgs = mutableListOf("--enable-preview")
+    alias(libs.plugins.compose.compiler) apply false
 }
